k8s/qa/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mfe-demo-qa
  labels:
    environment: qa
